--- a/data/config.env
+++ b/data/config.env
@@ -2,4 +2,4 @@ PORT = 4000
 MONGO_URL = "mongodb+srv://irfanmohmand987:a8XIoj52OexevSZE@blog.5ilym.mongodb.net/"
 JWT_SECRET = "!@#$%^&*"
 NODE_ENV = "Development"
-FRONTEND_URL = "http://localhost:5173"
+FRONTEND_URL = "http://localhost:5173/"
